added initial logic to create scheduled sync jobs with appropriate opeartions.